--- a/recipesbynowi.html
+++ b/recipesbynowi.html
@@ -27,7 +27,7 @@
   <body>
     <div class="jumbotron">
       <h1 class="titlehead"> nowi's original recipes </h1>
-      <p> dedicated with love from nowu </p>
+      <p> dedicated with love from nowu <3 </p>
     </div>
     
   </body>
