--- a/recipesbynowi.html
+++ b/recipesbynowi.html
@@ -23,6 +23,9 @@
         color: #B0A0BB;
       }
 
+      .jumbotron {
+        background-color: #D5CAD6;
+      }
     </style>
   </head>
   <body>
