--- a/recipesbynowi.html
+++ b/recipesbynowi.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title> nowi's original recipes </title>
+    <title> nowus </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -30,8 +30,8 @@
   </head>
   <body>
     <div class="jumbotron">
-      <h1 class="titlehead"> nowi's original recipes </h1>
-      <p> dedicated with love from nowu <3 </p>
+      <h1 class="titlehead"> isaac and cindy </h1>
+      <p> forever. </p>
     </div>
     
   </body>
