--- a/recipesbynowi.html
+++ b/recipesbynowi.html
@@ -31,7 +31,7 @@
   <body>
     <div class="jumbotron">
       <h1 class="titlehead"> isaac and cindy </h1>
-      <p> forever. </p>
+      <p> we are forever. </p>
     </div>
     
   </body>
