--- a/mvuznt.html
+++ b/mvuznt.html
@@ -20,7 +20,7 @@
       
       p {
         text-align: center;
-        color: #BDB4C1;
+        color: #75379B;
       }
       .jumbotron {
         background-color: #D5CAD6;
