--- a/mvuznt.html
+++ b/mvuznt.html
@@ -23,7 +23,7 @@
         color: #75379B;
       }
       .jumbotron {
-        background-color: #D5CAD6;
+        background-image: url("https://66.media.tumblr.com/8fa6c3c3666978087f91228153067a90/tumblr_p6pjimf5HP1xp1j77o1_400.gif");
         margin: 50px;
       }
     </style>
