--- a/mvuznt.html
+++ b/mvuznt.html
@@ -31,9 +31,12 @@
           background-size: cover;
       }
       
-      .titleuwu {
+      body {
           font-family: 'Poppins', sans-serif;
-
+      }
+      
+      .titleuwu {
+          background: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0));
       }
 
     </style>
@@ -43,7 +46,7 @@
         <div class="container d-flex h-100 align-items-center">
           <div class="mx-auto text-center">
             <h1 class="titleuwu">now us</h1>
-            <h2 class="titleuwu">cindy and isaac forever. </h2>
+            <h2>cindy and isaac forever. </h2>
           </div>
        </div>
      </header>
