--- a/mvuznt.html
+++ b/mvuznt.html
@@ -18,7 +18,7 @@
         color: #75379B;
       }
       
-      .masthead {
+      .container {
         position: relative;
         width: 100%;
         height: auto;
@@ -46,14 +46,14 @@
     </style>
   </head>
   <body>
-     <header class="masthead">
+     <div class="container">
         <div class="container d-flex h-100 align-items-center">
           <div class="mx-auto text-center">
             <h1 class="titleuwu">now us</h1>
             <h2 class="caiuwu">cindy and isaac forever. </h2>
           </div>
        </div>
-     </header>
+     </div>
     
   </body>
 </html>
