--- a/mvuznt.html
+++ b/mvuznt.html
@@ -31,7 +31,9 @@
       
       .titleuwu {
         font-size:100px;
-        background: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0));
+          background: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0));
+         -webkit-text-fill-color: transparent;
+         -webkit-background-clip: text;
       }
       
       .caiuwu {
