--- a/mvuznt.html
+++ b/mvuznt.html
@@ -14,7 +14,7 @@
       
       @import url('https://fonts.googleapis.com/css?family=Italianno|Poppins&display=swap');
       
-      .container {
+      .container-fluid {
         position: relative;
         width: 100%;
         height: 100%;
@@ -43,7 +43,7 @@
     </style>
   </head>
   <body>
-     <div class="container">
+     <div class="container-fluid">
         <div class="container d-flex h-100 align-items-center">
           <div class="mx-auto text-center">
             <h1 class="titleuwu">now us</h1>
