--- a/mvuznt.html
+++ b/mvuznt.html
@@ -41,11 +41,13 @@
   </head>
   <body>
      <div class="container-fluid">
+       <div class="row-fluid">
         <div class="container d-flex h-100 align-items-center">
           <div class="mx-auto text-center">
             <h1 class="titleuwu">now us</h1>
             <h2 class="caiuwu">cindy and isaac forever. </h2>
           </div>
+        </div>
        </div>
      </div>
     
