--- a/mvuznt.html
+++ b/mvuznt.html
@@ -39,17 +39,29 @@
 
     </style>
   </head>
-  <body>
-     <div class="container-fluid">
-       <div class="row-fluid">
-        <div class="container d-flex h-100 align-items-center">
-          <div class="mx-auto text-center">
-            <h1 class="titleuwu">now us</h1>
-            <h2 class="caiuwu">cindy and isaac forever. </h2>
-          </div>
+  <body class="text-center">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+      <header class="masthead mb-auto">
+        <div class="inner">
+          <h3 class="masthead-brand">Cover</h3>
+          <nav class="nav nav-masthead justify-content-center">
+            <a class="nav-link active" href="#">home</a>
+            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">Contact</a>
+          </nav>
         </div>
-       </div>
-     </div>
-    
+      </header>
+
+      <main role="main" class="inner cover">
+        <h1 class="cover-heading">now us</h1>
+        <p class="lead"> isaac and cindy forever. </p>
+      </main>
+
+      <footer class="mastfoot mt-auto">
+        <div class="inner">
+          <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
