--- a/mvuznt.html
+++ b/mvuznt.html
@@ -18,20 +18,8 @@
         font-family: 'Poppins', sans-serif;
         display: -ms-flexbox;
         display: flex;
-        color: #fff;
-        text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-        box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-      }
-      
-      .titleuwu {
-        font-size:100px;
-          background: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0));
-         -webkit-background-clip: text;
-      }
-      
-      .caiuwu {
-        font-family: 'Italianno', cursive;
-        font-size:50px;
+        color: Black;
+
       }
 
     </style>
