--- a/mvuznt.html
+++ b/mvuznt.html
@@ -21,6 +21,10 @@
         color: Black;
 
       }
+      
+      footer {
+        background-color: LimeGreen;
+      }
 
     </style>
   </head>
