--- a/mvuznt.html
+++ b/mvuznt.html
@@ -22,7 +22,18 @@
 
       }
       
+      .inner cover {
+        margin: 0;
+        background: yellow;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%) 
+      }
+      
       footer {
+        width: 100%
         background-color: LimeGreen;
       }
 
