--- a/mvuznt.html
+++ b/mvuznt.html
@@ -22,7 +22,7 @@
 
       }
       
-      .inner cover {
+      .main {
         margin: 0;
         background: yellow;
         position: absolute;
