--- a/mvuznt.html
+++ b/mvuznt.html
@@ -22,7 +22,7 @@
 
       }
       
-      .main {
+      .inner cover {
         margin: 0;
         background: yellow;
         position: absolute;
@@ -40,7 +40,6 @@
     </style>
   </head>
   <body class="text-center">
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="masthead mb-auto">
         <div class="inner">
           <h3 class="masthead-brand">Cover</h3>
