--- a/mvuznt.html
+++ b/mvuznt.html
@@ -58,7 +58,7 @@
 
       <footer class="mastfoot mt-auto">
         <div class="inner">
-          <p> from cindy, to isaac, and most importantly, for us. </p>
+          <p> from cindy to isaac, and most importantly, for us. </p>
         </div>
       </footer>
     </div>
