--- a/mvuznt.html
+++ b/mvuznt.html
@@ -40,27 +40,13 @@
     </style>
   </head>
   <body class="text-center">
-      <header class="masthead mb-auto">
-        <div class="inner">
-          <h3 class="masthead-brand">Cover</h3>
-          <nav class="nav nav-masthead justify-content-center">
-            <a class="nav-link active" href="#">home</a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Contact</a>
-          </nav>
-        </div>
-      </header>
-
-      <main role="main" class="inner cover">
-        <h1 class="cover-heading">now us</h1>
-        <p class="lead"> isaac and cindy forever. </p>
-      </main>
-
-      <footer class="mastfoot mt-auto">
-        <div class="inner">
-          <p> from cindy to isaac, and most importantly, for us. </p>
-        </div>
-      </footer>
+    <div class = "jumbotron">
+      <h1> nowus </h1>
     </div>
+    <footer class="mastfoot mt-auto">
+      <div class="inner">
+        <p> from cindy to isaac, and most importantly, for us. </p>
+      </div>
+    </footer>
   </body>
 </html>
