--- a/mvuznt.html
+++ b/mvuznt.html
@@ -39,8 +39,8 @@
 
     </style>
   </head>
-  <body class="text-center">
-    <div class = "jumbotron">
+  <body>
+    <div class = "jumbotron-text-center">
       <h1> nowus </h1>
     </div>
     <footer class="mastfoot mt-auto">
