--- a/mvuznt.html
+++ b/mvuznt.html
@@ -40,7 +40,7 @@
     </style>
   </head>
   <body>
-    <div class = "jumbotron-text-center">
+    <div class = "jumbotron text-center">
       <h1> nowus </h1>
     </div>
     <footer class="mastfoot mt-auto">
