--- a/mvuznt.html
+++ b/mvuznt.html
@@ -40,9 +40,12 @@
     </style>
   </head>
   <body>
-    <div class = "jumbotron text-center">
-      <h1> nowus </h1>
+    <div class = "container">
+      <div class = "jumbotron text-center">
+        <h1> nowus </h1>
+      </div>
     </div>
+    <p> please can you work </p>
     <footer class="mastfoot mt-auto">
       <div class="inner">
         <p> from cindy to isaac, and most importantly, for us. </p>
